@@ -21,16 +21,11 @@ package org.apache.cayenne.configuration.server;
 import java.util.Collection;
 import java.util.List;
 
-import javax.sql.DataSource;
-
 import org.apache.cayenne.ConfigurationException;
 import org.apache.cayenne.DataChannel;
 import org.apache.cayenne.DataChannelFilter;
 import org.apache.cayenne.access.DataDomain;
 import org.apache.cayenne.access.DataNode;
-import org.apache.cayenne.access.dbsync.SchemaUpdateStrategy;
-import org.apache.cayenne.access.jdbc.reader.RowReaderFactory;
-import org.apache.cayenne.access.translator.batch.BatchTranslatorFactory;
 import org.apache.cayenne.cache.NestedQueryCache;
 import org.apache.cayenne.cache.QueryCache;
 import org.apache.cayenne.configuration.ConfigurationTree;
@@ -40,12 +35,10 @@ import org.apache.cayenne.configuration.DataChannelDescriptorLoader;
 import org.apache.cayenne.configuration.DataChannelDescriptorMerger;
 import org.apache.cayenne.configuration.DataNodeDescriptor;
 import org.apache.cayenne.configuration.RuntimeProperties;
-import org.apache.cayenne.di.AdhocObjectFactory;
 import org.apache.cayenne.di.Inject;
 import org.apache.cayenne.di.Injector;
 import org.apache.cayenne.di.Provider;
 import org.apache.cayenne.event.EventManager;
-import org.apache.cayenne.log.JdbcEventLogger;
 import org.apache.cayenne.map.DataMap;
 import org.apache.cayenne.map.EntitySorter;
 import org.apache.cayenne.resource.Resource;
@@ -61,7 +54,7 @@ import org.apache.commons.logging.LogFactory;
  * @since 3.1
  */
 public class DataDomainProvider implements Provider<DataDomain> {
-    
+
     /**
      * @since 3.2
      */
@@ -78,18 +71,6 @@ public class DataDomainProvider implements Provider<DataDomain> {
     @Inject
     protected DataChannelDescriptorLoader loader;
 
-    @Inject
-    protected SchemaUpdateStrategy defaultSchemaUpdateStrategy;
-
-    @Inject
-    protected DbAdapterFactory adapterFactory;
-
-    @Inject
-    protected DataSourceFactory dataSourceFactory;
-
-    @Inject
-    protected AdhocObjectFactory objectFactory;
-
     @Inject(Constants.SERVER_DOMAIN_FILTERS_LIST)
     protected List<DataChannelFilter> filters;
 
@@ -100,19 +81,13 @@ public class DataDomainProvider implements Provider<DataDomain> {
     protected Injector injector;
 
     @Inject
-    protected JdbcEventLogger jdbcEventLogger;
-
-    @Inject
     protected QueryCache queryCache;
 
     @Inject
     protected RuntimeProperties runtimeProperties;
-    
+
     @Inject
-    protected RowReaderFactory rowReaderFactory;
-    
-    @Inject
-    protected BatchTranslatorFactory batchQueryBuilderFactory;
+    protected DataNodeFactory dataNodeFactory;
 
     @Override
     public DataDomain get() throws ConfigurationException {
@@ -188,40 +163,12 @@ public class DataDomainProvider implements Provider<DataDomain> {
 
         return dataDomain;
     }
-    
+
     /**
-     * @throws Exception 
      * @since 3.2
      */
     protected DataNode addDataNode(DataDomain dataDomain, DataNodeDescriptor nodeDescriptor) throws Exception {
-        DataNode dataNode = new DataNode(nodeDescriptor.getName());
-
-        dataNode.setJdbcEventLogger(jdbcEventLogger);
-        dataNode.setRowReaderFactory(rowReaderFactory);
-        dataNode.setBatchTranslatorFactory(batchQueryBuilderFactory);
-        
-        dataNode.setDataSourceLocation(nodeDescriptor.getParameters());
-
-        DataSource dataSource = dataSourceFactory.getDataSource(nodeDescriptor);
-
-        dataNode.setDataSourceFactory(nodeDescriptor.getDataSourceFactoryType());
-        dataNode.setDataSource(dataSource);
-
-        // schema update strategy
-        String schemaUpdateStrategyType = nodeDescriptor.getSchemaUpdateStrategyType();
-
-        if (schemaUpdateStrategyType == null) {
-            dataNode.setSchemaUpdateStrategy(defaultSchemaUpdateStrategy);
-            dataNode.setSchemaUpdateStrategyName(defaultSchemaUpdateStrategy.getClass().getName());
-        } else {
-            SchemaUpdateStrategy strategy = objectFactory.newInstance(SchemaUpdateStrategy.class,
-                    schemaUpdateStrategyType);
-            dataNode.setSchemaUpdateStrategyName(schemaUpdateStrategyType);
-            dataNode.setSchemaUpdateStrategy(strategy);
-        }
-
-        // DbAdapter
-        dataNode.setAdapter(adapterFactory.createAdapter(nodeDescriptor, dataSource));
+        DataNode dataNode = dataNodeFactory.createDataNode(nodeDescriptor);
 
         // DataMaps
         for (String dataMapName : nodeDescriptor.getDataMapNames()) {
